<resources>
    <string name="age">Age</string>
    <string name="app_name">Convalida</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cnpj">CNPJ</string>
    <string name="cpf">CPF</string>
    <string name="credit_card">Credit Card</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="initial_period">Initial Period</string>
    <string name="ipv4">IPV4</string>
    <string name="ipv6">IPV6</string>
    <string name="isbn">ISBN</string>
    <string name="final_period">Final Period</string>
    <string name="nickname">Nick Name</string>
    <string name="name">Name</string>
    <string name="numeric_limit">Numeric Limit</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="url">Url</string>
    <string name="validate_fields">Validate</string>
    <string name="clear_validations">Clear</string>

    <string name="field_required">Field required</string>
    <string name="invalid_credit_card">Invalid credit card number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_numeric_limit">The value must be between 0 and 100</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="invalid_password">The password must have letters and numbers</string>
    <string name="min_3_characters">Enter at least 3 characters</string>
    <string name="only_numbers">Only numbers are allowed</string>
    <string name="passwords_not_match">Passwords does not match</string>
    <string name="emails_not_match">Emails does not match</string>
    <string name="invalid_cnpj">CNPJ is not valid</string>
    <string name="invalid_cpf">CPF is not valid</string>
    <string name="invalid_past_date">Date exceeded the past date limit</string>
    <string name="invalid_future_date">Date exceeded the future date limit</string>
    <string name="invalid_isbn">ISBN is not valid</string>
    <string name="invalid_ipv4">IPV4 is not valid</string>
    <string name="invalid_ipv6">IPV6 is not valid</string>
    <string name="invalid_url">URL is not valid</string>
    <string name="start_value_not_valid">Start value is not valid</string>
    <string name="limit_value_not_valid">Limit value cannot be greater start value</string>

    <string name="annotations_sample">Annotations Sample</string>
    <string name="databinding_sample">Data Binding Sample</string>
    <string name="kotlin_dsl_sample">Kotlin Dsl Sample</string>

    <string name="using_annotations">Validations Using Annotations</string>
    <string name="using_databinding">Validations Using Data Binding</string>
    <string name="using_kotlin_dsl">Validations Using Kotlin Dsl</string>
</resources>
